# SoftRast

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  todo.txt
SoftRast/: Binning.cpp  Binning.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.h  Input.cpp  Main.cpp  Obj.cpp  Obj.h  Rasterizer.cpp  Rasterizer.h  Rasterizer_new.cpp  Rasterizer_new.h  Renderer.cpp  Renderer.h  SIMDUtil.h  SoftRastTypes.h  TaskSystem.cpp  TaskSystem.h  Texture.cpp  Texture.h  stb_image.cpp  stb_image_resize.cpp  stb_image_resize.h
SoftRast/Platform/: Input_Win32.h  Window_Win32.cpp  Window_Win32.h
Viewer/: CMakeLists.txt  Camera.cpp  Camera.h  Input.h  Main.cpp  Obj.cpp  Obj.h  Scene.cpp  Scene.h  Shaders.h  SponzaScene.cpp  SponzaScene.h
Viewer/Platform/: Input_Win32.cpp  Window_Win32.cpp
microprofile/: CMakeLists.txt  microprofile.config.h  microprofile.h  microprofile_html.h
