cmake_minimum_required(VERSION 3.2)
project(SoftRast)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS /Zi)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG")
endif()

if((CMAKE_CXX_COMPILER_ID MATCHES "GNU") OR (CMAKE_CXX_COMPILER_ID MATCHES "Clang"))
    add_compile_options(-mavx2)
	add_compile_options(-ffast-math)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    add_compile_options(/arch:AVX2)
	add_compile_options(/fp:fast)
	add_compile_options(/Oi)
endif()

add_subdirectory("kt")
add_subdirectory("SoftRast")
add_subdirectory("Viewer")